--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "karma start --single-run",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -15,8 +16,15 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-unit-mocha": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/test-utils": "^1.0.3",
-    "chai": "^4.1.2",
+    "@vue/test-utils": "^1.3.0",
+    "chai": "^4.3.4",
+    "karma": "^6.3.11",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-spec-reporter": "^0.0.33",
+    "karma-webpack": "4.0.2",
+    "mocha": "^9.1.4",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
